<resources>
    <string name="app_name">BeatCharts</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">E-mail</string>
    <string name="your_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="beatstar_community">Beatstar Mods community</string>
    <string name="chart_editor_offline">Chart editor (offline)</string>
    <string name="your_nickname">Your nickname</string>
    <string name="nickname_id_hint">Start typing to see your ID</string>
    <string name="general">General</string>
    <string name="additional">Additional</string>
    <string name="bio">About yourself... (500 characters max)</string>
    <string name="add_discord">Add Discord</string>
    <string name="add_yt">Add YouTube</string>
    <string name="add_telegram">Add Telegram</string>
    <string name="show_email">Tap to show your email to everyone</string>
    <string name="hide_email">Tap to hide your email from everyone</string>
    <string name="terms_text">I have read and will follow terms of use</string>
    <string name="openTOF">Read</string>
    <string name="checking">Checking...</string>
    <string name="invalid_email">Invalid email</string>
    <string name="disclaimer_text">Beatstar and its icon are registered trademarks of Space Ape or Hasbro. This content is not official and is not supported by Space Ape.</string>
    <string name="okay">Okay</string>
    <string name="chart_editor">Chart editor</string>
    <string name="chart_editor_description">Create, edit and instantly upload charts to the community on your Android device!</string>
    <string name="chart_editor_hint">The editor will work with .chart files and have a simple interface for creating charts for Beatstar. Development will begin as soon as the final version of BeatCharts is released.</string>
    <string name="invalid_nickname">Nickname must be between 3 and 12 characters. Only latin characters, nums and space</string>
    <string name="invalid_password">The password must be between 6 and 20 characters. Only latin characters and numbers</string>
    <string name="invalid_bio">Too much characters (500 is max)</string>
    <string name="terms_needed">Read and accept the Terms Of Use</string>
    <string name="registration_error">Registration error</string>
    <string name="login_error">Login error</string>
    <string name="invalid_login_data">Invalid login or password</string>
    <string name="discord_example">MyName#0000</string>
    <string name="yt_example">youtu.be/my_channel</string>
    <string name="telegram_example">\@my_username</string>
    <string name="save">Save</string>
    <string name="leave_empty_for_removing">Leave empty to remove</string>
    <string name="cant_contain_spaces">This field can\'t contain spaces</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="other">Other</string>
    <string name="installed">%1$s installed</string>
    <string name="client">Client</string>
    <string name="version_ok">Latest version installed</string>
    <string name="version_idk">Not checking because Beatclone is installed</string>
    <string name="version_but">Latest version installed, but...</string>
    <string name="version_checking">Checking for updates...</string>
    <string name="version_udp">Update available!</string>
    <string name="no_client">No client installed</string>
    <string name="songs">Songs</string>
    <string name="downloaded">%1$s downloaded</string>
    <string name="charted_by">Charted by</string>
    <string name="unknown_charter">Unknown charter</string>
    <string name="update">Update</string>
    <string name="hide_in_game">Hide</string>
    <string name="in_community">Details</string>
    <string name="delete_chart">Delete</string>
    <string name="show_in_game">Show</string>
    <string name="song_hidden">Song was hidden from the game</string>
    <string name="song_showed">Song was showed on the game</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="reloading_list">Updating list...</string>
    <string name="chart_deletion_title">Are you sure you want to delete this chart?</string>
    <string name="chart_deletion_chart_original">This action cannot be undone</string>
    <string name="chart_was_deleted">Chart was deleted</string>
    <string name="request_permission">Request permission/</string>
    <string name="files">Files</string>
    <string name="permissionFilesText">BeatCharts performs file operations in almost all of its functions, therefore, we need the Manage All Files permission for the application to work. Click \"To settings\" to give it to BeatCharts.</string>
    <string name="permissionFilesAdditional">Note: You need to \"Allow management of all files\" instead of \"Allow access to media files only\".</string>
    <string name="toSettings">To settings</string>
    <string name="requestPermissions">Request permission</string>
    <string name="permissionOldFilesText">BeatCharts performs file operations in almost all of its functions, therefore, we need the Manage All Files permission for the application to work. Click \"Request permissions\" to grant it.</string>
    <string name="reg_is_desabled">Creating a new account is disabled in this build. Wait for future updates!</string>
    <string name="login_is_disabled">Account login is disabled in this build. Wait for future updates!</string>
    <string name="years">years</string>
    <string name="month">mon</string>
    <string name="seconds">sec</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="mins">mins</string>
    <string name="chart_deleted">Chart \"%1$s\" was deleted</string>
    <string name="chart_game_hidden">Chart \"%1$s\" was hidden from Beatstar</string>
    <string name="chart_game_shown">Chart \"%1$s\" now shown in Beatstar</string>
    <string name="chart_publication">Chart publication</string>
    <string name="chart_title">Title</string>
    <string name="chart_performer">Artist</string>
    <string name="diff_normal">Normal</string>
    <string name="diff_hard">Hard</string>
    <string name="diff_extreme">Extreme</string>
    <string name="chart_files">Files</string>
    <string name="chart_settings">Settings</string>
    <string name="chart_page_settings">Information</string>
    <string name="archive_with_all_files">Zip with all files</string>
    <string name="prelisten_file">Prelisten file</string>
    <string name="click_to_select">Click to select</string>
    <string name="click_to_select_prelisten_file">Click to select (.mp3)</string>
    <string name="files_attachment_hint">You can attach individual files separately. They will replace the ones in the archive if you attached any already.</string>
    <string name="info_file">Info file</string>
    <string name="click_to_select_info_file">Click to select (.json)</string>
    <string name="chart_file">Chart file</string>
    <string name="artwork_file">Artwork file</string>
    <string name="audio_file">Audio file</string>
    <string name="config_file">Config file</string>
    <string name="click_to_select_chart_file">Click to select (.bundle, .chart)</string>
    <string name="click_to_select_artwork">Click to select (.bundle, .png, .jpg)</string>
    <string name="click_to_select_audio_file">Click to select (.bundle, .wem, .mp3)</string>
    <string name="click_to_select_config_file">Click to select (.json)</string>
    <string name="red_dot_files_hint">- Missing Files</string>
    <string name="update_available">Update alavilable!</string>
    <string name="test_build">Test build</string>
    <string name="upd_type_unknown">Unknown type</string>
    <string name="upd_type_optional">Optional</string>
    <string name="upd_type_features">Features update</string>
    <string name="upd_type_mandatory">Mandatory</string>
    <string name="upd_type_critical">Critical</string>
    <string name="upd_type_forced">Forced</string>
    <string name="mb">%1$s mb</string>
    <string name="upd_whats_new">What\'s new:</string>
    <string name="upd_download">Download</string>
    <string name="upd_announce">Update!</string>
    <string name="upd_choose_action">Choose action...</string>
    <string name="next">Next</string>
    <string name="search_hint">Song or user</string>
    <string name="starred">Starred</string>
    <string name="requests">Requests</string>
    <string name="uploadChart">Upload chart</string>
    <string name="proceed_to_next">Proceed to next</string>
    <string name="add_all_files_hint">Add all neccessary files (+%1$s)</string>
    <string name="wrong_file_text">File \"%1$s\" cannot be used as %2$s</string>
    <string name="wrong_file_title">Wrong file</string>
    <string name="ill_choose_another">Choose another</string>
    <string name="chart_file_incorrect">Chart file is incorrect</string>
    <string name="chart_file_incorrect_text">File \"%1$s\" contains the following mistakes: %2$s</string>
    <string name="ill_fix_it">Okay</string>
    <string name="exception_1_unknown_blue_flag">Unknown blue flag \"%1$s\" at position %2$s</string>
    <string name="exception_2_unknown_effect">Unknown effect \"%1$s\" at position %2$s</string>
    <string name="exception_3_error_parsing">Unknown error with .chart file on %1$s line</string>
    <string name="exception_4_event_note_missing">There is a flag at %1$s, but there was no note there</string>
    <string name="exception_5_unknown_event">Unknown flag \"%2$s\" at position %1$s</string>
    <string name="exception_6_swipe_missing_note">There is a flag event on lane %1$s, at position %2$s, and note is on another lane</string>
    <string name="exception_7_too_much_sections">Chart contains more than 5 sections</string>
    <string name="exception_8_no_sections">Charts doesn\'t contain sections</string>
    <string name="crop_an_image">Crop an image</string>
    <string name="crop">Crop</string>
    <string name="file_too_big">File is too big</string>
    <string name="file_more_than_mb">File \"%1$s\" is bigger than %2$s mb. (.wem/.bundle file should be less than 6 mb, and .mp3 - less than 12 mb.)</string>
    <string name="any_file_more_than_mb">File \"%1$s\" is bigger than %2$s mb. Please choose another.</string>
    <string name="files_were_not_imported">Following files were imported partially or was not at all: %1$s</string>
    <string name="files_had_problems">Unknown files</string>
    <string name="notes_count">Notes count</string>
    <string name="chart_duration">Chart duration</string>
    <string name="chart_bpm">BPM</string>
    <string name="segments">Stages</string>
    <string name="fix_all_chart_issues">Fix all problems</string>
    <string name="stage_number">Stage %1$s</string>
    <string name="stage_continues_unwanted">excess</string>
    <string name="stage_continues_final">final</string>
    <string name="enter_bpm">Enter BPM</string>
    <string name="value_hint">Value...</string>
    <string name="done">Done</string>
    <string name="too_much_sections">Too much stages</string>
    <string name="not_enough_sections">Not enough stages</string>
    <string name="everything_ok">Everything is ok</string>
    <string name="remove_stage_hint">Hold to remove stage</string>
    <string name="enter_stage_offset">Enter stage position</string>
    <string name="guest">Guest</string>
    <string name="tap_to_login">Login account</string>
    <string name="account_features">Log in to your account to get all the BeatCharts features:\n- Downloading and publishing user charts;\n- Participating in various events, including PVP competitions;\n- Synchronizing your score on custom charts and competing against other players!</string>
</resources>