<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogs.FilesDialog" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/requestDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/card_colored_a"
        android:paddingBottom="15dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/toSettingsButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardBackgroundColor="@color/background_level_b"
            app:cardCornerRadius="12sp"
            app:cardElevation="0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestAdditional">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6sp"
                android:layout_marginBottom="6sp"
                android:fontFamily="@font/googlesans_regular"
                android:text="@string/toSettings"
                android:textColor="@color/foreground_active"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/requestAdditional"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:alpha="0.7"
            android:text="@string/permissionFilesAdditional"
            android:textColor="@color/foreground_active"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestText" />

        <TextView
            android:id="@+id/requestText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:alpha="0.8"
            android:fontFamily="@font/googlesans_regular"
            android:text="@string/permissionFilesText"
            android:textColor="@color/foreground_active"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestTitle" />

        <LinearLayout
            android:id="@+id/titleBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="-5dp"
            android:background="@drawable/card_colored_a"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/requestTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></LinearLayout>

        <TextView
            android:id="@+id/requestAbout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:alpha="0.5"
            android:fontFamily="@font/googlesans_bold"
            android:text="@string/request_permission"
            android:textColor="@color/foreground_active"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/reqiestIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/requestTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestAbout"
            app:srcCompat="@drawable/folder"
            app:tint="@color/foreground_active" />

        <TextView
            android:id="@+id/requestTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/googlesans_medium"
            android:text="@string/files"
            android:textColor="@color/foreground_active"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reqiestIcon"
            app:layout_constraintTop_toBottomOf="@+id/requestAbout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>